RESOLVED FIXED219552
Non-unified build fixes, early December 2020 edition
https://bugs.webkit.org/show_bug.cgi?id=219552
Summary Non-unified build fixes, early December 2020 edition
Don Olmstead
Reported 2020-12-04 12:58:10 PST
I don't want a lot for Christmas There is just one thing I need I don't care about the presents Underneath the Christmas tree I just want you to build on your own More than you could ever know Make my wish come true oh All I want for Christmas is a non-unified build EWS
Attachments
Patch (3.88 KB, patch)
2020-12-07 08:19 PST, Don Olmstead
no flags
Patch (4.86 KB, patch)
2020-12-07 08:57 PST, Don Olmstead
no flags
Fujii Hironori
Comment 1 2020-12-04 13:50:10 PST
It seems like generated by AI songwriter.
Don Olmstead
Comment 2 2020-12-07 08:19:12 PST Comment hidden (obsolete)
Don Olmstead
Comment 3 2020-12-07 08:57:50 PST
EWS
Comment 4 2020-12-07 09:51:17 PST
Committed r270508: <https://trac.webkit.org/changeset/270508> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415558 [details].
Radar WebKit Bug Importer
Comment 5 2020-12-07 09:52:16 PST
Note You need to log in before you can comment on or make changes to this bug.