Non-unified build fixes, early December 2020 edition https://bugs.webkit.org/show_bug.cgi?id=219552

Unreviewed non-unified build fixes.


* display/css/DisplayBoxModelBox.cpp:
* display/css/DisplayStackingItem.cpp:
* display/css/DisplayStackingItem.h:
* html/HTMLIFrameElement.cpp:
* layout/inlineformatting/InlineLineBox.cpp:
* loader/DocumentLoader.cpp:
* platform/mediacapabilities/ColorGamut.h:
* platform/mediacapabilities/HdrMetadataType.h:


Canonical link: https://commits.webkit.org/232185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270508 268f45cc-cd09-0410-ab3c-d52691b4dbfc