Source/WebCore/display/css/DisplayBoxModelBox.cpp
@@ -31,6 +31,7 @@
 #include "DisplayBoxClip.h"
 #include "DisplayBoxDecorationData.h"
 #include "DisplayBoxRareGeometry.h"
+#include "ShadowData.h"
 #include <wtf/IsoMallocInlines.h>
 #include <wtf/text/TextStream.h>
 
