Source/WebCore/platform/mediacapabilities/ColorGamut.h
@@ -25,6 +25,8 @@
 
 #pragma once
 
+#include <wtf/EnumTraits.h>
+
 namespace WebCore {
 
 enum class ColorGamut : uint8_t {
