Source/WebCore/platform/mediacapabilities/HdrMetadataType.h
@@ -25,6 +25,8 @@
 
 #pragma once
 
+#include <wtf/EnumTraits.h>
+
 namespace WebCore {
 
 enum class HdrMetadataType : uint8_t {
